// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/admin/batch-jobs GET /admin/batch-jobs lists batch jobs created by the user 1`] = `
Object {
  "batch_jobs": Array [
    Object {
      "canceled_at": null,
      "completed_at": null,
      "confirmed_at": null,
      "context": Object {},
      "created_at": Any<String>,
      "created_by": "admin_user",
      "deleted_at": null,
      "dry_run": false,
      "failed_at": null,
      "id": "job_3",
      "pre_processed_at": null,
      "processing_at": null,
      "result": null,
      "status": "created",
      "type": "product-export",
      "updated_at": Any<String>,
    },
    Object {
      "canceled_at": null,
      "completed_at": null,
      "confirmed_at": null,
      "context": Object {},
      "created_at": Any<String>,
      "created_by": "admin_user",
      "deleted_at": null,
      "dry_run": false,
      "failed_at": null,
      "id": "job_2",
      "pre_processed_at": null,
      "processing_at": null,
      "result": null,
      "status": "created",
      "type": "product-export",
      "updated_at": Any<String>,
    },
    Object {
      "canceled_at": null,
      "completed_at": null,
      "confirmed_at": null,
      "context": Object {},
      "created_at": Any<String>,
      "created_by": "admin_user",
      "deleted_at": null,
      "dry_run": false,
      "failed_at": null,
      "id": "job_1",
      "pre_processed_at": null,
      "processing_at": null,
      "result": null,
      "status": "created",
      "type": "product-export",
      "updated_at": Any<String>,
    },
  ],
  "count": 3,
  "limit": 10,
  "offset": 0,
}
`;

exports[`/admin/batch-jobs POST /admin/batch-jobs/ Creates a batch job 1`] = `
Object {
  "canceled_at": null,
  "completed_at": null,
  "confirmed_at": null,
  "context": Object {
    "list_config": Object {
      "order": Object {
        "created_at": "DESC",
      },
      "relations": Array [
        "variants",
        "variants.prices",
        "variants.options",
        "images",
        "options",
        "tags",
        "type",
        "collection",
        "variants.prices.region",
      ],
      "skip": 0,
      "take": 50,
    },
  },
  "created_at": Any<String>,
  "created_by": "admin_user",
  "deleted_at": null,
  "dry_run": false,
  "failed_at": null,
  "id": Any<String>,
  "pre_processed_at": null,
  "processing_at": null,
  "result": null,
  "status": "created",
  "type": "product-export",
  "updated_at": Any<String>,
}
`;

exports[`/admin/batch-jobs POST /admin/batch-jobs/:id/cancel Cancels batch job created by the user 1`] = `
Object {
  "canceled_at": Any<String>,
  "completed_at": null,
  "confirmed_at": null,
  "context": Object {},
  "created_at": Any<String>,
  "created_by": "admin_user",
  "deleted_at": null,
  "dry_run": false,
  "failed_at": null,
  "id": "job_1",
  "pre_processed_at": null,
  "processing_at": null,
  "result": null,
  "status": "canceled",
  "type": "product-export",
  "updated_at": Any<String>,
}
`;
